video overlapping header solved

--- a/src/appLayout/AppLayout.css
+++ b/src/appLayout/AppLayout.css
@@ -58,6 +58,7 @@
     position: sticky;
     top: 0;
     background-color: white;
+    z-index: 10;
   }
   .user-info-pl {
     position: sticky;
